# SlippiLiveDisplay

./: .gitignore  CMakeLists.txt  README.md  main.cpp
android/: AndroidManifest.xml
android/res/values/: strings.xml
ios/: Project-Info.plist
qml/: Main.qml  config.json
qml/controls/: CustomListItem.qml  CustomText.qml
qml/model/: Constants.qml  DataModel.qml
qml/overlays/: GameOverlay.qml  PlayerOverlay.qml
qml/pages/: InfoPage.qml  SettingsPage.qml
src/: dolphinconnection.cpp  dolphinconnection.h  eventparser.cpp  eventparser.h  main.cpp  slippievents.cpp  slippievents.h
